--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "styled-components": "^6.0.7"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@trybe/eslint-config-frontend": "^1.11.4",
